RESOLVED FIXED 199807
[iOS] REGRESSION (r241734): Autocorrection highlight should hide when field becomes defocused
https://bugs.webkit.org/show_bug.cgi?id=199807
Summary [iOS] REGRESSION (r241734): Autocorrection highlight should hide when field b...
Daniel Bates
Reported 2019-07-15 14:17:14 PDT
Steps to reproduce: 1. Attach hardware keyboard. 2. Visit <data:text/html,<input><button>Tap</button>>. 3. Press any key, say a. 4. Focus the field, type something that would be autocorrected, say djn. 5. Once the autocorrection highlight appears, tap the button. Then the autocorrection highlight should hide. But it remains visible.
Attachments
For the bots (1.08 KB, patch)
2019-07-15 14:18 PDT, Daniel Bates
no flags
For the Bots (836 bytes, patch)
2019-07-15 16:03 PDT, Daniel Bates
no flags
Alternative for the bots (1.01 KB, patch)
2019-07-17 16:37 PDT, Daniel Bates
no flags
Alt for the bots (1.12 KB, patch)
2019-07-17 16:40 PDT, Daniel Bates
no flags
Patch (4.20 KB, patch)
2019-07-18 15:41 PDT, Daniel Bates
no flags
Daniel Bates
Comment 1 2019-07-15 14:17:31 PDT
Daniel Bates
Comment 2 2019-07-15 14:18:42 PDT
Created attachment 374148 [details] For the bots
Daniel Bates
Comment 3 2019-07-15 15:28:19 PDT
Patch no good. Already nilled the inputDelegate
Daniel Bates
Comment 4 2019-07-15 16:03:06 PDT
Created attachment 374160 [details] For the Bots
Daniel Bates
Comment 5 2019-07-17 16:37:50 PDT
Created attachment 374348 [details] Alternative for the bots
Daniel Bates
Comment 6 2019-07-17 16:40:29 PDT
Created attachment 374349 [details] Alt for the bots
Daniel Bates
Comment 7 2019-07-18 15:41:27 PDT
Created attachment 374421 [details] Patch It is not possible to write a reproducible test case for this change at the moment because the Input Manager learns to ignore misspelling when a correction is repeatedly ignored/rejected (say, as a result of running a test more than once) and these learnings persist across Simulator reboots. There is no way to tell the Input Manager to unlearn a misspelling as far as I can tell.
Daniel Bates
Comment 8 2019-07-19 14:58:18 PDT
Comment on attachment 374421 [details] Patch Clearing flags on attachment: 374421 Committed r247653: <https://trac.webkit.org/changeset/247653>
Daniel Bates
Comment 9 2019-07-19 14:58:20 PDT
All reviewed patches have been landed. Closing bug.
Daniel Bates
Comment 10 2019-07-22 10:29:54 PDT
(In reply to Daniel Bates from comment #8) > Comment on attachment 374421 [details] > Patch > > Clearing flags on attachment: 374421 > > Committed r247653: <https://trac.webkit.org/changeset/247653> Wow! This is a bad merge. Svn-apply couldn't find -_didCommitLoadForMainFrame and patch -clearSelection instead
Daniel Bates
Comment 11 2019-07-22 10:35:48 PDT
Note You need to log in before you can comment on or make changes to this bug.